--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
       <p><b>Commands with "[args]" should be read thoroughly!</b>
       <br>Commands with "(args)" have optional settings and can be used with or without extra stuff</p>
       <ul>
-        <li><a href="#waifuregister">WaifuRegister [args] / HusbandoRegister [args]</a> | (register a waifu and husbando!)</li>
-        <li><a href="#mywaifu">MyWaifu / MyHusbando</a> | (receive an image of your registered waifu or husbando!)</li>
-        <li><a href="#waifu">Waifu / Husbando (args)</a> | (get a random waifu or husbando!)</li>
-        <li><a href="#otp">OTP / Yuri OTP / Yaoi OTP (args)</a> | (find your OTP!)</li>
-        <li><a href="#shipgirl">Shipgirl</a> | (get a random Kancolle girl!)</li>
-        <li><a href="#imouto">Imouto</a> | (find out your random little sister!)</li>
-        <li><a href="#onii">Onii-chan</a> | (who is your big brother?)</li>
-        <li><a href="#onee">Onee-chan</a> | (who is your big sister?)</li>
-        <li><a href="#idol">Idol (args)</a> | (get a random idol!)</li>
-        <li><a href="#touhou">Touhou</a> | (recive a random Touhou girl!)</li>
-        <li><a href="#sensei">Sensei (args)</a> | (who is your sensei?)</li>
-        <li><a href="#shota">Shota</a> | (get a little shota boy!)</li>
-        <li><a href="#vocaloid">Vocaloid</a> | (random vocaloid!)</li>
-        <li><a href="#source">Source</a> | (find source on an image!)</li>
+        <li><a href="#waifuregister">WaifuRegister [args] / HusbandoRegister [args]</a></li>
+        <li><a href="#mywaifu">MyWaifu / MyHusbando</a></li>
+        <li><a href="#waifu">Waifu / Husbando (args)</a></li>
+        <li><a href="#otp">OTP / Yuri OTP / Yaoi OTP (args)</a></li>
+        <li><a href="#shipgirl">Shipgirl</a></li>
+        <li><a href="#imouto">Imouto</a></li>
+        <li><a href="#onii">Onii-chan</a></li>
+        <li><a href="#onee">Onee-chan</a></li>
+        <li><a href="#idol">Idol (args)</a></li>
+        <li><a href="#touhou">Touhou</a></li>
+        <li><a href="#sensei">Sensei (args)</a></li>
+        <li><a href="#shota">Shota</a></li>
+        <li><a href="#vocaloid">Vocaloid</a></li>
+        <li><a href="#source">Source</a></li>
       </ul>
 
       <a name="waifuregister"></a>
@@ -93,6 +93,21 @@
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Yaoi OTP is Akira Agarkar YAMADA and Bobobo-bo BO-BOBO from Tsuritama and Bobobo-bo Bo-bobo <a href="http://t.co/AXB74nnUjk">pic.twitter.com/AXB74nnUjk</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/569669444244545537">February 23, 2015</a></blockquote>
       <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Yuri OTP is Mei Terumi and Matsumoto Rangiku (Naruto / Bleach) <a href="http://t.co/3wHezyEDiE">pic.twitter.com/3wHezyEDiE</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/591406786953007104">April 24, 2015</a></blockquote>
 
+      <a name="faq"></a>
+      <h3>Frequently asked questions</h3>
+      <p><b>Q: Why am I limited?</b>
+      <br>A: Limits are here for many reasons. If you want more "mah waifu" go google their name. MyWaifu is for a small handful of images at a time. Not a whole website worth of images in 10 minutes.
+      <br><b>Q: Why such a long wait on WaifuRegister limit?</b>
+      <br>A: Stop being a slut and stick with one waifu. It's to stop you from abuseing the system and using waifuregister for any image you want. Once again: go to google for that.
+      <br><b>Q: But I messed up on reigering :(</b>
+      <br>A: That isn't a question. Stop fucking up.
+      <br><b>Q: I was blocked!!! WHY!?!</b>
+      <br>A: I only block people that abuse the bot. You can also get banned if you keep following and unfollowing to use waifuregister (you get 2 warnings).
+      <br><b>Q: Can I register more than 1 waifu?</b>
+      <br>A: It is kinda planned (2 max), but I'm not sure how to implement this with keeping WaifuWednesday in mind (tweeting both would hit a twitter limit).
+      <br><b>Q: I have a problem that isn't listed here!</b>
+      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a></p>
+
       <a name="showlist"></a>
       <h3>Show List</h3>
       <p>Use CTRL + F to find the one you want. Try looking for Japanese and English name.</p>
@@ -103,3 +118,4 @@
 
   </body>
 </html>
+
