--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3>Jump to</h3>
       <ul>
         <li><a href="#commands">Commands</a></li>
-        <li><a href="#showlist">Waifu/OTP Show list</a></p></li>
+        <li><a href="#showlist">Waifu/OTP Show list</a></li>
         <li><a href="#faq">Frequently asked questions</a></li>
       </ul>
 
