--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <br>A: Limits are here for many reasons. If you want more "mah waifu" go google their name. MyWaifu is for a small handful of images at a time. Not a whole website worth of images in 10 minutes.
       <br><b>Q: Why such a long wait on WaifuRegister limit?</b>
       <br>A: Stop being a slut and stick with one waifu. It's to stop you from abuseing the system and using waifuregister for any image you want. Once again: go to google for that.
-      <br><b>Q: But I messed up on reigering :(</b>
+      <br><b>Q: But I messed up on registering :(</b>
       <br>A: That isn't a question. Stop fucking up.
       <br><b>Q: I was blocked!!! WHY!?!</b>
       <br>A: I only block people that abuse the bot. You can also get banned if you keep following and unfollowing to use waifuregister (you get 2 warnings).
