--- a/index.html
+++ b/index.html
@@ -105,8 +105,12 @@
       <br>A: I only block people that abuse the bot. You can also get banned if you keep following and unfollowing to use waifuregister (you get 2 warnings).
       <br><b>Q: Can I register more than 1 waifu?</b>
       <br>A: It is kinda planned (2 max), but I'm not sure how to implement this with keeping WaifuWednesday in mind (tweeting both would hit a twitter limit).
+      <br><b>Q: How can I request a feature?</b>
+      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
       <br><b>Q: I have a problem that isn't listed here!</b>
-      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a></p>
+      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
+      <br><b>Q: What's with the hate for us French people :(?</b>
+      <br>A: You lot are the ones that fuck up the most. Stop fucking up.</p>
 
       <a name="showlist"></a>
       <h3>Show List</h3>
