--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <br><b>Q: I have a problem that isn't listed here!</b>
       <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
       <br><b>Q: What's with the hate for us French people :(?</b>
-      <br>A: You lot are the ones that fuck up the most. Stop fucking up.</p>
+      <br>A: You lot are the ones that fuck up the most right infont of spanish people. Stop fucking up.</p>
 
       <a name="showlist"></a>
       <h3>Show List</h3>
