--- a/index.html
+++ b/index.html
@@ -97,12 +97,16 @@
       <h3>Frequently asked questions</h3>
       <p><b>Q: Why am I limited?</b>
       <br>A: Limits are here for many reasons. If you want more "mah waifu" go google their name. MyWaifu is for a small handful of images at a time. Not a whole website worth of images in 10 minutes.
+      <br><b>Q: What are the limits?</b>
+      <br>A: I'm not too sure on what to stick with so they're changing around daily for now. As I'm writing this the limit for MyWaifu (which includes MyHusbando), is limited to 6 every 4 hours (* while the waifuwednesday job is running this is limited to 2 for 1 hour, then moved back to 6 every 4).
+      <br>WaifuRegister is limited to 5 every 72 hours.
+      <br>Other commands such as "waifu" and "imouto" are at a default 10 every 2 hours.
       <br><b>Q: Why such a long wait on WaifuRegister limit?</b>
       <br>A: Stop being a slut and stick with one waifu. It's to stop you from abuseing the system and using waifuregister for any image you want. Once again: go to google for that.
       <br><b>Q: But I messed up on registering :(</b>
       <br>A: That isn't a question. Stop fucking up.
       <br><b>Q: I was blocked!!! WHY!?!</b>
-      <br>A: I only block people that abuse the bot. You can also get banned if you keep following and unfollowing to use waifuregister (you get 2 warnings).
+      <br>A: I only block people that abuse the bot (this includes: finding and abuseing loopholes, wasting my servers cpu cycles on you trying to register a real person). You can also get blocked if you keep following and unfollowing to use waifuregister (you get 2 warnings).
       <br><b>Q: Can I register more than 1 waifu?</b>
       <br>A: It is kinda planned (2 max), but I'm not sure how to implement this with keeping WaifuWednesday in mind (tweeting both would hit a twitter limit).
       <br><b>Q: How can I request a feature?</b>
