--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
       <br>A: I'm not too sure on what to stick with so they're changing around daily for now. As I'm writing this the limit for MyWaifu (which includes MyHusbando), is limited to 6 every 4 hours (* while the waifuwednesday job is running this is limited to 2 for 1 hour, then moved back to 6 every 4).
       <br>WaifuRegister is limited to 5 every 72 hours.
       <br>Other commands such as "waifu" and "imouto" are at a default 10 every 2 hours.
+      <br><b>Q: What time and how long is the WaifuWednesday job?</b>
+      <br>A: The job starts at 2pm (GMT), and runs for about 2 hours.
       <br><b>Q: Why such a long wait on WaifuRegister limit?</b>
       <br>A: Stop being a slut and stick with one waifu. It's to stop you from abuseing the system and using waifuregister for any image you want. Once again: go to google for that.
       <br><b>Q: But I messed up on registering :(</b>
