--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Acetwitterbot by ace3df</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script async src="//code.jquery.com/jquery-2.1.4.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
