--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -129,7 +130,7 @@
 
       <a name="showlist"></a>
       <h3>Show List</h3>
-      <p>Use CTRL + F to find the one you want. Try looking for Japanese and English name.</p>
+      <p>Use CTRL + F to find the one you want. Try looking for the Japanese, English and short (novel) name.</p>
 <iframe src="https://raw.githubusercontent.com/ace3df/AcePictureBot/master/temp/show_list.txt" width="100%" height="400" align="center">
 </iframe>
     </section>
