--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <a name="showlist"></a>
       <h3>Show List</h3>
       <p>Use CTRL + F to find the one you want. Try looking for the Japanese, English and short (novel) name.</p>
-<iframe src="https://raw.githubusercontent.com/ace3df/AcePictureBot/master/temp/show_list.txt" width="100%" height="400" align="center">
+<iframe src="https://gist.githubusercontent.com/ace3df/668bbdb796895035bbce/raw/d8250a3b95038d19e46f091a884fb4042cb13e78/gistfile1.txt" width="100%" height="400" align="center">
 </iframe>
     </section>
 
