--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
       
       <h3>Jump to</h3>
       <ul>
+        <li><a href="#accounts">Accounts</a></li>
         <li><a href="#commands">Commands</a></li>
         <li><a href="#showlist">Waifu/OTP Show list</a></li>
         <li><a href="#faq">Frequently asked questions</a></li>
       </ul>
+
+      <a name="accounts"></a>
+      <h3>Accounts</h3>
+      <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes; <b>DIRECT ALL COMMANDS TO THIS ACCOUNT!</b>
+      <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
+      <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
 
       <a name="commands"></a>
       <h3>Commands</h3>
@@ -57,6 +64,17 @@
       <p>Register a waifu and/or a husbando!
       <br>Automaticaly recive an image every #WaifuWednesday or manually by using MyWaifu/MyHusbando.
       <br>Before using this command please read these things:
+      <br><b>1. </b>You MUST follow the bot to register!
+      <br><b>2. </b>User their full name!
+      <br><b>3. </b>Don't include any special characters!
+      <br>(ū > uu | ç > c | è > e)
+      <br><b>4. </b>Sometimes single names will have to have their show name in brackets "( )" (See examples first)!
+      <br><b>5. </b>If the name is single and you're not too sure, the bot will automaticaly help you when registering!
+      <br><b>6. </b>You are limited to using the register command to 5 times per 100 hours (Click here to see why)!
+
+
+
+
       <br><b>1. </b>Use their full name.
       <br><b>2. </b>Make sure you spell their name correctly (this includes ū > uu).
       <br><b>3. </b>Sometimes sigle names will have to have their show name in () (see example).
@@ -99,33 +117,44 @@
       <a name="faq"></a>
       <h3>Frequently asked questions</h3>
       <p><b>Q: Why am I limited?</b>
-      <br>A: Limits are here for many reasons. If you want more "mah waifu" go google their name. MyWaifu is for a small handful of images at a time. Not a whole website worth of images in 10 minutes.
-      <br><b>Q: What are the limits?</b>
-      <br>A: I'm not too sure on what to stick with so they're changing around daily for now. As I'm writing this the limit for MyWaifu (which includes MyHusbando), is limited to 6 every 4 hours (* while the waifuwednesday job is running this is limited to 2 for 1 hour, then moved back to 6 every 4).
-      <br>WaifuRegister is limited to 5 every 72 hours.
-      <br>Other commands such as "waifu" and "imouto" are at a default 10 every 2 hours.
-      <br><b>Q: What time and how long is the WaifuWednesday job?</b>
-      <br>A: The job starts at 2pm (GMT), and runs for about 2 hours.
-      <br><b>Q: Why such a long wait on WaifuRegister limit?</b>
-      <br>A: Stop being a slut and stick with one waifu. It's to stop you from abuseing the system and using waifuregister for any image you want. Once again: go to google for that.
-      <br><b>Q: But I messed up on registering :(</b>
-      <br>A: That isn't a question. Stop fucking up.
-      <br><b>Q: I was blocked!!! WHY!?!</b>
-      <br>A: I only block people that abuse the bot (this includes: finding and abuseing loopholes, wasting my servers cpu cycles on you trying to register a real person). You can also get blocked if you keep following and unfollowing to use waifuregister (you get 2 warnings).
-      <br><b>Q: Can I register more than 1 waifu?</b>
-      <br>A: It is kinda planned (2 max), but I'm not sure how to implement this with keeping WaifuWednesday in mind (tweeting both would hit a twitter limit).
-      <br><b>Q: How can I request a feature?</b>
-      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
-      <br><b>Q: I have a problem that isn't listed here!</b>
-      <br>A: Tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
-      <br><b>Q: What's with the hate for us French people :(?</b>
-      <br>A: You lot are the ones that fuck up the most right infont of spanish people. Stop fucking up.</p>
+      <br><b>A: </b>Limits are here for many reasosn. I want every command (shipgirl, touhou, etc.) to always include an image. These image sites also have their own limits, as well as Twitter.
+
+      <br><b>Q: What are the current limits?</b>
+      <br><b>A: </b>Currently these are the limits:-
+      <br>WaifuRegister: 5 Times x 100 Hours
+      <br>MyWaifu: 8 Times x 3 Hours
+      <br>Airing: 5 Times x 10 Hours
+      <br>Every Other Command: 10 Times x 2 Hours
+      <br>You are also limited on using: 5 Commands x 2 Minutes
+
+      <br><b>Q: Why is MyWaifu limited less on WaifuWednesday?</b>
+      <br><b>A: </b>The limit is lowered to 2 Times x 1 Hour while the "WaifuWednesday" job is running. The job runs at 10am (GMT) and runs for about 4 hours. This is to limit the chances of errors for everyone. Once the job is finished it will go back to the orginal limits.
+
+      <br><b>Q: Why is WaifuRegister time limit so high?</b>
+      <br><b>A: </b>I orginally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
+
+      <br><b>Q: I was blocked?!</b>
+      <br><b>A: </b>I personally don't block. The bot will block users who unfollow and refollow to use WaifuRegister. The bot will tweet at you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list.
+
+      <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
+      <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
+
+      <br><b>Q: How can I help you out?</b>
+      <br><b>A: </b>The bot is open for everyone on github. I'm bad at programming so feel free to fix my mistakes.
+
+      <br><b>Q: How do I request a feature?</b>
+      <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
+
+
+      <br><b>Q: I have a problem not listed here!</b>
+      <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
+
 
       <a name="showlist"></a>
       <h3>Show List</h3>
       <p>Use CTRL + F to find the one you want. Try looking for the Japanese, English and short (novel) name.</p>
-<iframe src="https://cdn.rawgit.com/ace3df/AcePictureBot/master/temp/show_list.txt" width="100%" height="400" align="center">
-</iframe>
+      <iframe src="https://cdn.rawgit.com/ace3df/AcePictureBot/master/temp/show_list.txt" width="100%" height="400" align="center">
+      </iframe>
     </section>
 
 
