--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
       <a name="accounts"></a>
       <h3>Accounts</h3>
-      <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes; <b>DIRECT ALL COMMANDS TO THIS ACCOUNT!</b>
+      <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
+      <br><b>DIRECT ALL COMMANDS TO THIS ACCOUNT!</b>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
 
@@ -70,17 +71,9 @@
       <br>(ū > uu | ç > c | è > e)
       <br><b>4. </b>Sometimes single names will have to have their show name in brackets "( )" (See examples first)!
       <br><b>5. </b>If the name is single and you're not too sure, the bot will automaticaly help you when registering!
-      <br><b>6. </b>You are limited to using the register command to 5 times per 100 hours (Click here to see why)!
+      <br><b>6. </b>You are limited to using the register command to 5 times per 100 hours <a href="#waifulimit">(Click here to see why)</a>!
 
 
-
-
-      <br><b>1. </b>Use their full name.
-      <br><b>2. </b>Make sure you spell their name correctly (this includes ū > uu).
-      <br><b>3. </b>Sometimes sigle names will have to have their show name in () (see example).
-      <br><b>4. </b>Don't bitch if you don't get many pictures. Get a better waifu.
-      <br>You can NOT register more than one waifu/husbando. You may change them by doing WaifuRegister again.
-      <br><b>Don't be a slut!</b></p>
       <h4>Examples</h4>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/VCo2Wjzc2e">pic.twitter.com/VCo2Wjzc2e</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/584372094831583232">April 4, 2015</a></blockquote>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/Be2OZE4lxP">pic.twitter.com/Be2OZE4lxP</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/586238129713127424">April 9, 2015</a></blockquote>
@@ -129,7 +122,7 @@
 
       <br><b>Q: Why is MyWaifu limited less on WaifuWednesday?</b>
       <br><b>A: </b>The limit is lowered to 2 Times x 1 Hour while the "WaifuWednesday" job is running. The job runs at 10am (GMT) and runs for about 4 hours. This is to limit the chances of errors for everyone. Once the job is finished it will go back to the orginal limits.
-
+      <a name="waifulimit"></a>
       <br><b>Q: Why is WaifuRegister time limit so high?</b>
       <br><b>A: </b>I orginally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
 
