--- a/Examples/waifuregister.html
+++ b/Examples/waifuregister.html
@@ -5,11 +5,11 @@
     <title>Acetwitterbot by ace3df</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
   </head>
   <body>
    <section class="main-content">
@@ -21,7 +21,7 @@
            <br>I also DON'T see any other Lucina on the list so I might get lucky and she might be the only one.
            <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="und" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/yxSYnKhe9y">pic.twitter.com/yxSYnKhe9y</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596781903132368897">May 8, 2015</a></blockquote>
            <br>...and we got an image! The "$" overrides the single name check so that's why we include that <b>at the end</b></p>
-           
+
 
 
 
