--- a/Examples/waifuregister.html
+++ b/Examples/waifuregister.html
@@ -15,14 +15,15 @@
    <section class="main-content">
            <p><b>More than one name was found!</b></p>
            <blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> More than one name was found. Please read: <a href="http://pastebin.com/JapJRX8B">http://pastebin.com/JapJRX8B</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596781062044446720">May 8, 2015</a></blockquote>
+           <p>(* new pastebin link <a href="http://pastebin.com/JapJRX8B">http://pastebin.com/JapJRX8B</a>)</p>
            <p>The pastebin holds many names that will hopefully help you find the person you want!
            <br>This is to help you so you wont get another person called (for example) Lucaina from another show.
            <br>Going down the list you will see "Lucina (fire emblem) *" but also see "Lucina $"...
-           <br>We also DON'T see any other Lucina on the list so I might get lucky with and she might be the only one.
+           <br>We also DON'T see any other Lucina on the list so I might get lucky with the single name and she might be the only one named Lucina.
            <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="und" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/yxSYnKhe9y">pic.twitter.com/yxSYnKhe9y</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596781903132368897">May 8, 2015</a></blockquote>
            <br>...and we got an image!
            <br>The "$" overrides the single name check so that's why we include that <b>at the end of the name</b></p>
-           <p>More Examples:</p>
+           <p><b>More Examples:</b></p>
            <p>I noticed the "." in the name when I searched for her full name on MyAnimeList!</p>
           <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="und" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/SfoPwN53wl">pic.twitter.com/SfoPwN53wl</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596785548716564481">May 8, 2015</a></blockquote>
 
