--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <ul>
         <li><a href="#accounts">Accounts</a></li>
         <li><a href="#commands">Commands</a></li>
-        <li><a href="#showlist">Waifu/OTP Show list</a></li>
         <li><a href="#faq">Frequently asked questions</a></li>
+        <li><a href="#showlist">Show list</a></li>
       </ul>
 
       <a name="accounts"></a>
@@ -66,18 +66,25 @@
       <br>Automaticaly recive an image every #WaifuWednesday or manually by using MyWaifu/MyHusbando.
       <br>Before using this command please read these things:
       <br><b>1. </b>You MUST follow the bot to register!
-      <br><b>2. </b>User their full name!
+      <br><b>2. </b>User their full name (If you're not sure check MyAnimeList)!
       <br><b>3. </b>Don't include any special characters!
       <br>(ū > uu | ç > c | è > e)
       <br><b>4. </b>Sometimes single names will have to have their show name in brackets "( )" (See examples first)!
       <br><b>5. </b>If the name is single and you're not too sure, the bot will automaticaly help you when registering!
-      <br><b>6. </b>You are limited to using the register command to 5 times per 100 hours <a href="#waifulimit">(Click here to see why)</a>!
+      <br><b>6. </b>You are limited at using the register command - 5 times per 100 hours <a href="#waifulimit">(Click here to see why)</a>!
+      <br><b>7. </b>Seasonal waifus are a bad idea as not much art is out there!
+      <br><b>DO NOT REGISTER: </b>a real person or a pony.
 
 
       <h4>Examples</h4>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/VCo2Wjzc2e">pic.twitter.com/VCo2Wjzc2e</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/584372094831583232">April 4, 2015</a></blockquote>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/Be2OZE4lxP">pic.twitter.com/Be2OZE4lxP</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/586238129713127424">April 9, 2015</a></blockquote>
-
+      <center>
+      <a href="Examples/waifuregister.html">
+      <button class="btn btn-info">Click here for more examples!</button>
+      </a>
+      </center>
+      
       <a name="mywaifu"></a>
       <h3>MyWaifu / MyHusbando</h3>
       <p>Recieve an image of your waifu or husbando!<p>
@@ -93,9 +100,11 @@
       <h4>Examples</h4>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your waifu is Hiiragi from Hanamaru Youchien <a href="http://t.co/2nBmQ5txa5">pic.twitter.com/2nBmQ5txa5</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/584707835981864960">April 5, 2015</a></blockquote>
       <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your waifu is Konomi Suzue from Triage X <a href="http://t.co/CxRbf2tpC1">pic.twitter.com/CxRbf2tpC1</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/591403683570704384">April 24, 2015</a></blockquote>
+      <center>
       <a href="Examples/waifu.html">
-      <button>Click here for more examples!</button>
+      <button class="btn btn-info">Click here for more examples!</button>
       </a>
+      </center>
       <a name="otp"></a>
       <h3>OTP / Yuri OTP / Yaoi OTP (args)</h3>
       <p>Get a random OTP, Yuri OTP or Yaoi OTP!
@@ -124,10 +133,10 @@
       <br><b>A: </b>The limit is lowered to 2 Times x 1 Hour while the "WaifuWednesday" job is running. The job runs at 10am (GMT) and runs for about 4 hours. This is to limit the chances of errors for everyone. Once the job is finished it will go back to the orginal limits.
       <a name="waifulimit"></a>
       <br><b>Q: Why is WaifuRegister time limit so high?</b>
-      <br><b>A: </b>I orginally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
+      <br><b>A: </b>I originally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
 
       <br><b>Q: I was blocked?!</b>
-      <br><b>A: </b>I personally don't block. The bot will block users who unfollow and refollow to use WaifuRegister. The bot will tweet at you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list.
+      <br><b>A: </b>I personally don't block. The bot will block users who unfollow and refollow to use WaifuRegister. The bot will tweet at you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get blocked for not following the "DO NOT REGISTER" list.
 
       <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
       <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
