--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> <a href="https://twitter.com/hashtag/WaifuAnyDay?src=hash">#WaifuAnyDay</a> <a href="http://t.co/Be2OZE4lxP">pic.twitter.com/Be2OZE4lxP</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/586238129713127424">April 9, 2015</a></blockquote>
       <center>
       <a href="Examples/waifuregister.html">
-      <button class="btn">Click here for more examples!</button>
+      <button type="button" class="btn btn-info">Click here for more examples!</button>
       </a>
       </center>
 
@@ -102,7 +102,7 @@
       <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your waifu is Konomi Suzue from Triage X <a href="http://t.co/CxRbf2tpC1">pic.twitter.com/CxRbf2tpC1</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/591403683570704384">April 24, 2015</a></blockquote>
       <center>
       <a href="Examples/waifu.html">
-      <button class="btn">Click here for more examples!</button>
+      <button type="button" class="btn btn-info">Click here for more examples!</button>
       </a>
       </center>
       <a name="otp"></a>
