--- a/Examples/waifu.html
+++ b/Examples/waifu.html
@@ -5,16 +5,19 @@
     <title>Acetwitterbot by ace3df</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
   </head>
   <body>
-
+   <section class="main-content">
             <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your husbando is Takigawa Yoshino from Zetsuen No Tempest <a href="http://t.co/9oEtjc1vZr">pic.twitter.com/9oEtjc1vZr</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596761561542307840">May 8, 2015</a></blockquote>
             <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="in" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your waifu is Bernstein Kirara from Gj-bu <a href="http://t.co/Px1S3E958X">pic.twitter.com/Px1S3E958X</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596761935045066753">May 8, 2015</a></blockquote>
             <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your waifu is Saber from Fate (series) <a href="http://t.co/3RZD5DwPwZ">pic.twitter.com/3RZD5DwPwZ</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596762132814921728">May 8, 2015</a></blockquote>
-        </body>
+			<blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your husbando is Ukitake Juushiro from Bleach <a href="http://t.co/4cRZV335Wj">pic.twitter.com/4cRZV335Wj</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596767774485192704">May 8, 2015</a></blockquote>
+
+    </section>   
+   </body>
    </html>
