--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a name="accounts"></a>
       <h3>Accounts</h3>
       <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
-      <br><b>DIRECT ALL COMMANDS TO THIS ACCOUNT!</b>
+      <br><b>ONLY USE THIS ACCOUNT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
 
