--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
       <br><b>ONLY USE THIS ACCOUNT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
+      <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.</p>
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
 
       <a name="commands"></a>
@@ -74,7 +75,7 @@
       <br><b>5. </b>If the name is single and you're not too sure, the bot will automaticaly help you when registering!
       <br><b>6. </b>You are limited at using the register command - 5 times per 100 hours <a href="#waifulimit">(Click here to see why)</a>!
       <br><b>7. </b>Seasonal waifus are a bad idea as not much art is out there!
-      <br><b>DO NOT REGISTER: </b>a real person or a pony.
+      <br><b>DO NOT REGISTER: </b>a real person, anime name, tags (1girl, 1boy, etc.), or a pony.
 
 
       <h4>Examples</h4>
@@ -228,8 +229,11 @@
       <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
       <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
 
+      <br><b>Q: Can I use another Twitter account for another waifu?</b>
+      <br><b>A: </b>I'd prefer if you didn't. I can't stop you. But if I see 100s of accounts that link to you then I will take action.
+
       <br><b>Q: How can I help you out?</b>
-      <br><b>A: </b>The bot is open for everyone on github. I'm bad at programming so feel free to fix my mistakes.
+      <br><b>A: </b>The bot is open for anyone on github. I'm bad at programming so feel free to fix my mistakes.
 
       <br><b>Q: How do I request a feature?</b>
       <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
